# nasy-lab-slides

./: .gitignore  readme.org  ref.bib
20241108-optim_sche/: readme.typ  tricks.bib
220603-hgt/: hgt.org  hgt.tex  ref.bib
220719-astro1/: astro1.tex  readme.org  setup.org
220731-hg/: .gitignore  g.drawio  readme.org  readme.tex
220916-jianTCellReceptorPeptideInteraction2022/: note  readme.org  setup.org  slides.org  slides.tex
221118-pinns/: readme.org  readme.tex
230127-cnn/: readme.org  readme.tex
230323-tuning/: readme.org  readme.tex
230411-icl/: readme.org  readme.tex
230519-llama/: readme.org  readme.tex
230716-llava/: readme.org  readme.tex
231012-llm_n_meta_op/: readme.org  readme.tex
231103-jax/: pyproject.toml  readme.org  readme.tex
240324-sac/: main.bib  readme.typ
240412-linear-models/: readme.typ  ref.bib
240426-mamba/: readme.old.typ  readme.typ
240608-dl/: readme.typ
xxxxxx-kan/: readme.typ
